descriptive text that emphasizes or further describes significant
changes made.  See document footer for additional details.

----------------------------------------------------------------------
--- 2013-03-XX  Release 7.24.0                                     ---
----------------------------------------------------------------------

* fixed graphics window z-clipping bug in mged - Bob Parker
* fixed mged lesson 15 toy truck 'inside' ordering bug - Sean Morrison
* fixed uninstallable Linux RPM package on Fedora 18 - Jordi Sayol
* improved Mac, BSD, & Windows ray tracing performance - Sean Morrison
* improved Linux ray tracing via cpu thread affinity - Akshay Kashyap
* fixed nirt high object count failure on Windows - Richard Weiss
* added plate mode BoT support to 'bot_merge' command - Richard Weiss
* jove removed, see jove.emacs for compatibility bindings - Cliff Yapp
* added gqa -q quiet option to suppress 'was not hit' - Richard Weiss
* level-of-detail mged configuration dialog, under Tools - Nick Reed
* added level-of-detail wireframe support to mged/archer - Nick Reed
* fixed patch-g -f input file permissions failure - Sean Morrison
* improved large file support for the patch-g importer - Sean Morrison
* openNURBS updated to version 5.0 (2012-10-24) - Richard Weiss
* improved BoT mesh editing interface in archer - Bob Parker
* fixed crash when running screengrab in archer - Nick Reed
* fixed asc2g and mged empty revolve object crashes - Sean Morrison
* fixed crash when parsing invalid shader parameters - Cliff Yapp
* fixed mged 'dbupgrade' -permissions error on windows - Sean Morrison
* fixed infinite loop raytracing subtracted lights - Sean Morrison
* added hyp centroid and volume output to 'analyze' - Aaron Keesing
* added support for wireframe drawing of 'hyp' labels - Bob Parker
* fixed random number SMP bug affecting rt and adrt - Sean Morrison
* added support for editing 2D sketch objects in archer - Bob Parker