@@ -13,6 +13,7 @@ changes made.  See document footer for additional details.
 --- 2013-03-XX  Release 7.24.0                                     ---
 ----------------------------------------------------------------------
 
+* fixed search command bombing on v4 database file - Sean Morrison
 * fixed graphics window z-clipping bug in mged - Bob Parker
 * fixed mged lesson 15 toy truck 'inside' ordering bug - Sean Morrison
 * fixed uninstallable Linux RPM package on Fedora 18 - Jordi Sayol
